<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_20">20</string>
<string name="lbl_posts_4">Posts   4</string>
<string name="lbl_arooj_aftab">Arooj Aftab</string>
<string name="lbl_char_huang">Char Huang</string>
<string name="msg_john_s_comment">John S. commented on your 
prediction: \u201cBoooo...\u201d</string>
<string name="msg_search_grammygu">Search GrammyGuessr</string>
<string name="lbl_101">101</string>
<string name="lbl_100">100</string>
<string name="lbl_friends_30">Friends   30</string>
<string name="lbl_best_new_artist"> Voted For Best New Artist </string>
<string name="lbl_finneas">Finneas</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_char_h">Char H.</string>
<string name="lbl_most_popular">Most Popular</string>
<string name="lbl_tap_to_predict">TAP TO PREDICT</string>
    <string name="lbl_tap_to_edit">TAP TO EDIT</string>
<string name="msg_album_of_the_ye">Album of the year</string>
<string name="lbl_john_s">John S.</string>
<string name="lbl_4_sec">4 sec</string>
<string name="msg_of_prediction">% of predictions</string>
<string name="lbl_posts">Posts</string>
<string name="lbl_save_prediction">SAVE PREDICTION</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="msg_john_s_downvot">John S. downvoted your prediction.</string>
<string name="lbl_boooo">Boooo....</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_12_seconds_ago">12 seconds ago</string>
<string name="lbl_username">Username</string>
<string name="lbl_edit_profile">EDIT PROFILE</string>
<string name="lbl_6_minutes_ago">6 minutes ago</string>
<string name="msg_record_of_the_y">Record of the Year</string>
<string name="lbl_search">Search</string>
<string name="lbl_people">People</string>
<string name="msg_write_a_comment">Write a comment...</string>
<string name="lbl_2">2</string>
<string name="lbl_4">4</string>
<string name="msg_home_screen">Home Screen -- Click on Post</string>
<string name="lbl_friends">Friends</string>
<string name="lbl_47">47</string>
<string name="lbl_feed">Feed</string>
<string name="lbl_1_sec">1 sec</string>
<string name="lbl_post">POST</string>
<string name="lbl_login">LOGIN</string>
<string name="lbl_view_all">View All</string>
<string name="msg_what_s_on_your">What\u2019s on your mind?</string>
<string name="msg_why_does_olivia">Why does Olivia Rodrigo have so many nominations??</string>
<string name="lbl_login_screen">Login Screen</string>
<string name="msg_home_screen_ma">Home Screen (Make a Post)</string>
<string name="lbl_30">30</string>
<string name="lbl_3_13_pm">3:13 PM</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_password">Password</string>
<string name="lbl_predictions">Predictions</string>
<string name="lbl_grammyguessr">GrammyGuessr</string>
<string name="lbl_4_5_22">4/5/22</string>
<string name="lbl_olivia_rodrigo">Olivia Rodrigo</string>
<string name="lbl_home_screen">Home Screen</string>
<string name="msg_freedom_jon_b">\u201cFreedom\u201d Jon Batiste</string>
<string name="msg_select_predicti">SELECT PREDICTION</string>
<string name="lbl_jimmie_allen">Jimmie Allen</string>
 <string name="lbl_show_pie_chart">View Voting Breakdown</string>
<string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="global">Global</string>
    <string name="friends">Friends</string>
</resources>
